# Mini-Nginx

./: CMakeLists.txt  LICENSE  README.md  main.cpp
core/include/: conf_parser.h
core/src/: conf_parser.cpp
http/include/: http_parser.h  http_proxy.h
http/src/: http_parser.cpp  http_proxy.cpp
log/include/: log.h
log/src/: log.cpp
